# barcode-app

./: CMakeLists.txt  build.sh  main.cpp
core/: App.cpp  App.h  SafeQueue.h  app.cpp  app.h  safeQueue.h
display/: DisplayManager.cpp  DisplayManager.h  displayManager.cpp  displayManager.h
media/: cameraManager.cpp  cameraManager.h
